crates/gridwell-writer-ansi/tests/snapshots/snapshots__snapshot_minimal_1x1.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: "render(\"minimal/minimal_1x1.json\")"
---
┌────────────┐
│[1m   Value    [0m│
├────────────┤
│   Hello    │
└────────────┘
