crates/gridwell-writer-ansi/tests/snapshots/snapshots__snapshot_minimal_no_header.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: "render(\"minimal/minimal_no_header.json\")"
---
┌────────────┬────────────┐
│[1m    Name    [0m│[1m   Score    [0m│
├────────────┼────────────┤
│   Alice    │     95     │
│    Bob     │     87     │
└────────────┴────────────┘
