crates/gridwell-writer-ansi/tests/snapshots/snapshots__snapshot_row_group_multiple.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: "render(\"minimal/row_group_multiple.json\")"
---
┌────────────┬────────────┬────────────┐
│[1m    City    [0m│[1m  Pop (M)   [0m│[1m Area (km²) [0m│
├────────────┼────────────┼────────────┤
│[1m Asia                                 [0m│
├────────────┼────────────┼────────────┤
│   Tokyo    │   13.96    │   2,194    │
│   Seoul    │    9.74    │    605     │
├────────────┼────────────┼────────────┤
│[1m Europe                               [0m│
├────────────┼────────────┼────────────┤
│   London   │    8.98    │   1,572    │
│   Paris    │    2.16    │    105     │
└────────────┴────────────┴────────────┘
