crates/gridwell-writer-ansi/tests/snapshots/snapshots__snapshot_rowspan_basic.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: "render(\"minimal/rowspan_basic.json\")"
---
┌────────────┬────────────┐
│[1m  Country   [0m│[1m   Value    [0m│
├────────────┼────────────┤
│   Japan    │    100     │
│    110     │
│   Korea    │     80     │
└────────────┴────────────┘
