crates/gridwell-writer-ansi/tests/snapshots/snapshots__snapshot_styles_borders.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: "render(\"minimal/styles_borders.json\")"
---
┌─────────────┬─────────────┬─────────────┐
│[1m      A      [0m│[1m      B      [0m│[1m      C      [0m│
├─────────────┼─────────────┼─────────────┤
│ all borders │ all borders │ all borders │
│   dashed    │   dashed    │   dashed    │
│    none     │    none     │    none     │
└─────────────┴─────────────┴─────────────┘
