crates/gridwell-writer-ansi/tests/snapshots/snapshots__snapshot_summary_rows.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: "render(\"minimal/summary_rows.json\")"
---
┌────────────┬────────────┬────────────┐
│[1m    Item    [0m│[1m    Qty     [0m│[1m   Total    [0m│
├────────────┼────────────┼────────────┤
│[1m Order #1234                          [0m│
├────────────┼────────────┼────────────┤
│   Apples   │     5      │   $7.50    │
│   Bread    │     2      │   $8.00    │
├────────────┼────────────┼────────────┤
│[1m   Total    [0m│[1m     7      [0m│[1m   $15.50   [0m│
└────────────┴────────────┴────────────┘
