crates/gridwell-writer-ansi/tests/snapshots/snapshots__style-composition.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┐
│[1m Key        [0m│[1m Value      [0m│
├────────────┼────────────┤
│ normal     │ 42         │
│[1m[38;2;44;62;80m special    [0m│ 99         │
└────────────┴────────────┘
